@@ -15,17 +15,26 @@ import org.mariuszgromada.math.mxparser.Argument;
 import org.mariuszgromada.math.mxparser.Constant;
 import org.mariuszgromada.math.mxparser.Expression;
 
-import fft_battleground.botland.GeneFileCache;
-import fft_battleground.botland.model.Bet;
+import fft_battleground.botland.bot.genetic.GeneFileV1Cache;
+import fft_battleground.botland.bot.model.Bet;
+import fft_battleground.botland.bot.util.BetterBetBot;
+import fft_battleground.botland.bot.util.BotCanInverse;
+import fft_battleground.botland.bot.util.BotCanUseBetExpressions;
+import fft_battleground.botland.bot.util.BotContainsPersonality;
+import fft_battleground.botland.bot.util.BotParameterReader;
 import fft_battleground.botland.model.BotParam;
 import fft_battleground.exception.BotConfigException;
 import fft_battleground.model.BattleGroundTeam;
+import fft_battleground.tournament.classifier.UnitAttributeClassifier;
+import fft_battleground.tournament.classifier.V1UnitAttributeClassifier;
 import fft_battleground.tournament.model.Unit;
 import fft_battleground.util.GambleUtil;
 import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
-public class UnitAwareBot extends BetterBetBot {
+public class UnitAwareBot 
+extends BetterBetBot 
+implements BotCanInverse, BotContainsPersonality, BotCanUseBetExpressions {
 
 	private static final String BRAVE_MULTIPLIER_PARAMETER = "bravemultiplier";
 	private static final String FAITH_MULTIPLIER_PARAMETER = "faithmuliplier";
@@ -35,37 +44,32 @@ public class UnitAwareBot extends BetterBetBot {
 	private float braveMultiplier = 0f;
 	private float faithMultiplier = 0f;
 	private Map<String, Float> unitParameters = new HashMap<>();
-	private GeneFileCache geneFileCache;
+	private GeneFileV1Cache geneFileCache;
 	
-	public UnitAwareBot(Integer currentAmountToBetWith, BattleGroundTeam left, BattleGroundTeam right, GeneFileCache geneFileCache) {
+	protected UnitAttributeClassifier V1UnitAttributeClassifier = new V1UnitAttributeClassifier();
+	
+	public UnitAwareBot(Integer currentAmountToBetWith, BattleGroundTeam left, BattleGroundTeam right, GeneFileV1Cache geneFileCache) {
 		super(currentAmountToBetWith, left, right);
 		this.geneFileCache = geneFileCache;
 	}
 
 	@Override
 	public void initParams(Map<String, BotParam> map) throws BotConfigException {
-		if(map.containsKey(BET_AMOUNT_EXPRESSION_PARAMETER)) {
-			this.betAmountExpression = map.get(BET_AMOUNT_EXPRESSION_PARAMETER).getValue();
-		}
-		if(map.containsKey(PERSONALITY_PARAM)) {
-			this.personalityName = map.get(PERSONALITY_PARAM).getValue();
-		}
-		if(map.containsKey(INVERSE_PARAM)) {
-			super.inverse = Boolean.valueOf(map.get(INVERSE_PARAM).getValue());
-		}
-		if(map.containsKey(BRAVE_MULTIPLIER_PARAMETER)) {
-			this.braveMultiplier = Float.valueOf(map.get(BRAVE_MULTIPLIER_PARAMETER).getValue());
-		}
-		if(map.containsKey(FAITH_MULTIPLIER_PARAMETER)) {
-			this.faithMultiplier = Float.valueOf(map.get(FAITH_MULTIPLIER_PARAMETER).getValue());
-		}
+		BotParameterReader reader = new BotParameterReader(map);
+		this.betAmountExpression = this.readBetAmountExpression(reader)
+				.orElseThrow(BotParameterReader.throwBotconfigException("missing parameter " + this.getBetAmountExpressionParameter() + " for bot " + this.name));
+		this.personalityName = this.readPersonalityParam(reader);
+		this.inverse = this.readInverseParameter(reader);
+		this.braveMultiplier = reader.readParam(BRAVE_MULTIPLIER_PARAMETER, Float::valueOf).orElse(0f);
+		this.faithMultiplier = reader.readParam(FAITH_MULTIPLIER_PARAMETER, Float::valueOf).orElse(0f);
 		
-		List<String> usedParameters = Arrays.asList(new String[] {BET_AMOUNT_EXPRESSION_PARAMETER, PERSONALITY_PARAM, INVERSE_PARAM, BRAVE_MULTIPLIER_PARAMETER, FAITH_MULTIPLIER_PARAMETER});
-		Function<String, String> keyFunction = key -> StringUtils.lowerCase(key);
+		List<String> usedParameters = Arrays.asList(new String[] {this.getBetAmountExpressionParameter(), this.getPersonalityParam(), this.getInverseParam(), 
+				BRAVE_MULTIPLIER_PARAMETER, FAITH_MULTIPLIER_PARAMETER});
+		Function<String, Float> readParameterFunction = (key) -> reader.readParam(key, Float::valueOf).orElse(0f);
 		this.unitParameters = map.keySet().stream()
 				.filter(key -> !usedParameters.contains(key))
 				.filter(key -> StringUtils.isNumeric(map.get(key).getValue()))
-				.collect(Collectors.toMap(keyFunction, key -> Float.valueOf(map.get(key).getValue())));
+				.collect(Collectors.toMap(StringUtils::lowerCase, readParameterFunction));
 		
 		
 	}
@@ -120,7 +124,8 @@ public class UnitAwareBot extends BetterBetBot {
 		Float score = 0f;
 		score+= this.braveMultiplier * unit.getBrave();
 		score += this.faithMultiplier * unit.getFaith();
-		List<String> geneAbilities = unit.getUnitGeneAbilityElements().stream().map(ability -> StringUtils.lowerCase(ability)).collect(Collectors.toList());
+		List<String> geneAbilities = this.V1UnitAttributeClassifier.getUnitGeneAbilityElements(unit)
+				.stream().map(ability -> StringUtils.lowerCase(ability)).collect(Collectors.toList());
 		Map<String, Float> relevantGeneAbilities = new HashMap<>();
 		for(String ability: geneAbilities) {
 			if(this.unitParameters.containsKey(ability)) {
@@ -146,7 +151,7 @@ public class UnitAwareBot extends BetterBetBot {
 		
 		Expression exp = new Expression(this.betAmountExpression, leftScoreArg, rightScoreArg, minBet, maxBet, balanceArg);
 		
-		result = new Double(exp.calculate()).intValue();
+		result = Double.valueOf(exp.calculate()).intValue();
 		
 		return result;
 	}
@@ -159,7 +164,7 @@ class UnitAwareBotConfigVerifier {
 	
 	public UnitAwareBotConfigVerifier() {}
 	
-	public UnitAwareBotConfigVerifier(GeneFileCache cache) {
+	public UnitAwareBotConfigVerifier(GeneFileV1Cache cache) {
 		this.validAttributes = cache.getLatestFile().getGeneticAttributes().stream()
 		.map(geneticAttribute -> StringUtils.lowerCase(geneticAttribute.getKey()))
 		.collect(Collectors.toList());
